[package]
name = "rnix"
version = "0.1.0"
edition = "2021"
authors = ["Matt Cook <hello@mattcook.dev>"]
description = "CLI to create rust apps in a Nix environment"
readme = "README.md"
repository = "https://github.com/sciencefidelity/rnix"
license = "MIT or Apache-2.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]


